# FinSwipe_be_springboot

./: .env.example  .gitignore  Dockerfile  build.gradle.kts  settings.gradle.kts
genai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
genai/app/: __init__.py  config.py  database.py  main.py
genai/app/core/: __init__.py  auth.py  config.py  logging.py  runtime_safety.py
genai/app/db/: __init__.py  check.py  postgres.py  sqlite.py
genai/app/prompts/: news_prompts.py  (+1 more)
genai/docs/: api_spec.md  genai_spec.md  openapi.json  openapi.yaml  ops_constraints.md  pm_api_handoff.md  release_cutover_runbook.md  smoke_test_checklist.md
genai/migrations/: V14__add_level_quiz_tables.sql
genai/scripts/: benchmark_xai.py  build_domain_matrix.py  finswipe-genai-digest-worker.service  release_gate.py  run_smoke_suite.py  smoke_test_enrichment.py  supabase_lockdown_genai_tables.sql
genai/tests/: conftest.py  test_alert_policy.py  test_api_end_to_end.py  test_attention_xai.py  test_basic_auth.py  test_config.py  test_db_check.py  test_domain_matrix.py  test_enrichment_service_timeout.py  test_gemini_client.py  test_ingestion_service.py  test_mixed_detector.py  test_operational_stats.py  test_orchestrator.py  test_payload_builder.py  test_release_regression_20_cases.py  test_repository_factory.py  test_schemas.py  test_sentiment.py  test_sentiment_thresholds.py  test_smoke_suite.py  test_summarizer.py  test_summarizer_gemini.py  test_text_cleaner.py  test_translation_service.py  test_xai_indices.py
(+245 files in other folders)
