[project]
name = "financial-news-genai-service"
version = "0.1.0"
description = "FastAPI skeleton for financial news Gen AI enrichment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "numpy>=1.26.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "requests>=2.32.0,<3.0.0",
    "torch>=2.3.0,<3.0.0",
    "transformers>=4.44.0,<5.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "yfinance>=0.2.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
test = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]